fosps-enviroment/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gh-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: fosps-domain-cert
    hosts:
    - fosps.gravitatehealth.eu
  - port:      
      number: 80      
      name: http      
      protocol: HTTP    
    hosts:    
    - fosps.gravitatehealth.eu
